# lif-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LIF_Release_1_(R1)_Executive_Summary.md  README.md  commitlint.config.mjs  cspell.json  demo.aws  dev.aws  exec.sh  mkdocs.yml  pyproject.toml  workspace.toml
.aws/: config
.github/: pull_request_template.md
.github/workflows/: dagster.yml  dagster_cloud_agent.yml  dagster_code_location.yml  lif_advisor_api.yml  lif_advisor_app.yml  lif_example_data_source_rest_api.yml  lif_graphql_api.yml  lif_identity_mapper_api.yml  lif_identity_mapper_mariadb.yml  lif_learner_data_export_api.yml  lif_mdr_api.yml  lif_orchestrator_api.yml  lif_query_cache_api.yml  lif_query_planner_api.yml  lif_semantic_search_mcp_server.yml  lif_translator_api.yml  mongodb.yml  mongodb_seed.yml
bases/: README.md
cloudformation/: README.md  campus-api-adapter-taskdef-includes.yml  cognito-selfserve.yml  dagster-cloud-agent-taskdef-includes.yml  dagster-cloud-agent-taskrole-includes.yml  dagster-daemon-taskdef-includes.yml  dagster-ose-taskdef-includes.yml  dagster-webserver-taskdef-includes.yml  demo-lif-advisor-api.params  demo-lif-advisor-app.params  demo-lif-common.params  demo-lif-dagster-code-location.params  demo-lif-example-data-source-rest-api.params  demo-lif-graphql-org1.params  demo-lif-graphql-org2.params  demo-lif-graphql-org3.params  demo-lif-graphql.params  demo-lif-identity-mapper-mariadb-org1.params  demo-lif-identity-mapper-mariadb-org2.params  demo-lif-identity-mapper-mariadb-org3.params  demo-lif-identity-mapper-org1.params  demo-lif-identity-mapper-org2.params  demo-lif-identity-mapper-org3.params  demo-lif-learner-data-export-api.params  demo-lif-mdr-api.params  demo-lif-mongodb-org1.params  demo-lif-mongodb-org2.params  demo-lif-mongodb-org3.params  demo-lif-mongodb-seed.params  demo-lif-mongodb.params  demo-lif-networking.params  demo-lif-orchestrator.params  demo-lif-query-cache-org1.params  demo-lif-query-cache-org2.params  demo-lif-query-cache-org3.params  demo-lif-query-cache.params  demo-lif-query-planner-org1.params  demo-lif-query-planner-org2.params  demo-lif-query-planner-org3.params  demo-lif-query-planner.params  (+54 more)
components/: README.md
deployments/: README.md
deployments/advisor-demo-docker/: README.md  docker-compose.yml
development/: README.md  docker-compose.yml  docker_compose_dagster.yaml
development/advisor-demo-1org/: README.md  docker-compose.yml
development/advisor-demo-3orgs/: README.md  docker-compose.yml
development/mcp_client/: client.py
development/mdr-load-test/: .env.example  README.md  functional-test.js  k6.config.js  load-test.js  run-tests.sh  smoke-test.js  spike-test.js  stress-test.js  utils.js
development/patrick/: load_mongodb.sh
development/scripts/: build_all_project_wheels.sh  run_docker_mongodb.sh  run_lif_advisor_restapi.sh  run_lif_api_graphql.sh  run_lif_identity_mapper_restapi.sh  (+4 more)
docs/: COMMITTERS.md  CONTRIBUTING.md  INDEX.md  LIF_Component_Design_Document-Adapters.md  LIF_Component_Design_Document-Composer.md  LIF_Component_Design_Document-Identity_Mapper.md  LIF_Component_Design_Document-LIF_API.md  LIF_Component_Design_Document-LIF_Orchestrator.md  LIF_Component_Design_Document-LIF_Query_Cache.md  LIF_Component_Design_Document-MDR.md  LIF_Component_Design_Document-Query_Planner.md  LIF_Component_Design_Document-Translator.md  LIF_Data_Model_Rules.md  LIF_Load_Testing.md  README.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontends/: README.md
integration_tests/: README.md  conftest.py  pytest.ini  test_01_mongodb.py  test_02_query_cache.py  test_03_query_planner.py  test_04_graphql.py  test_05_cross_org.py  test_06_semantic_search.py
orchestrators/: README.md
orchestrators/dagster/lif-orchestrator/: README.md  pyproject.toml
orchestrators/dagster/lif-orchestrator/src/lif_orchestrator/defs/: lif_job.py
orchestrators/dagster/lif-orchestrator/tests/: test_definitions.py
projects/: README.md
projects/dagster_oss_ecs/: Dockerfile.code_location  Dockerfile.dagster  README.md  dagster.yaml  pyproject.toml  workspace.yaml
projects/lif_advisor_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_example_data_source_rest_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_graphql_api/: .gitignore  Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_graphql_api/load-test/: .env.example  .gitignore  README.md  functional-test.js  k6.config.js  load-test.js  run-tests.sh  smoke-test.js  spike-test.js  stress-test.js  utils.js
projects/lif_identity_mapper_mariadb/: 01-seed-file-setup.sh  02-ddl.sql  Dockerfile  README.md  build-docker.sh  pyproject.toml
projects/lif_identity_mapper_mariadb/sample_data/advisor-demo-org1/: seed.sql
projects/lif_identity_mapper_mariadb/sample_data/advisor-demo-org2/: seed.sql
projects/lif_learner_data_export_api/: .gitignore  Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_mdr_api/: API_KEY_AUTHENTICATION.md  AUTHENTICATION.md  Dockerfile  Dockerfile2  README.md  docker-compose.yml  mdr-api.env.example  pyproject.toml
projects/lif_orchestrator_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_query_cache_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_query_planner_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  build.sh  entrypoint.sh  pyproject.toml
projects/lif_semantic_search_mcp_server/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
projects/lif_translator_api/: Dockerfile  Dockerfile2  README.md  build-docker.sh  pyproject.toml
sam/: deploy-sam.sh
schemas/: README.md
scripts/: README_sample_users.md  fix_sample_data_schema.py  generate_sample_users.py  init-stack-params.sh  login.sh  setup-mdr-api-keys.sh  verify-demo-images.sh
test/: README.md
(+544 files in other folders)
