[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "dagster_docker_compose"
version = "0.1.0"

requires-python = ">=3.13,<3.14"

dependencies = [
    "pydantic~=2.11",
    "dagster==1.11.12",
    "dagster-postgres==0.27.12",
    "dagster-aws==0.27.12",
    "httpx~=0.28",
    "jsonpath-ng~=1.7",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../components/lif/data_source_adapters" = "lif/data_source_adapters"
"../../components/lif/datatypes" = "lif/datatypes"
"../../components/lif/exceptions" = "lif/exceptions"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/query_planner_service" = "lif/query_planner_service"
