[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lif_example_data_source_rest_api"
version = "1.0.0"

requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi~=0.115",
    "pyjwt~=2.10",
    "uvicorn~=0.34",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../bases/lif/example_data_source_rest_api" = "lif/example_data_source_rest_api"
"../../components/lif/example_data_source_service" = "lif/example_data_source_service"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/auth" = "lif/auth"
