[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lif_graphql_api"
version = "0.1.0"

requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi~=0.115",
    "httpx~=0.28",
    "strawberry-graphql[asgi]~=0.275",
    "uvicorn~=0.34",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../bases/lif/api_graphql" = "lif/api_graphql"
"../../components/lif/mdr_client" = "lif/mdr_client"
"../../components/lif/openapi_to_graphql" = "lif/openapi_to_graphql"
"../../components/lif/string_utils" = "lif/string_utils"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/exceptions" = "lif/exceptions"
