[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lif_query_cache_api"
version = "0.1.0"

requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi~=0.115",
    "pydantic~=2.11",
    "pymongo~=4.13",
    "uvicorn~=0.34",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../bases/lif/query_cache_restapi" = "lif/query_cache_restapi"
"../../components/lif/query_cache_service" = "lif/query_cache_service"
"../../components/lif/datatypes" = "lif/datatypes"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/mongodb_connection" = "lif/mongodb_connection"
"../../components/lif/exceptions" = "lif/exceptions"
"../../components/lif/composer" = "lif/composer"
"../../components/lif/lif_schema_config" = "lif/lif_schema_config"
