[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lif_translator_api"
version = "0.1.0"

requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi~=0.115",
    "httpx~=0.28",
    "jsonata-python~=0.6",
    "jsonpath-ng~=1.7",
    "jsonschema~=4.25",
    "pydantic~=2.11",
    "uvicorn~=0.34",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../bases/lif/translator_restapi" = "lif/translator_restapi"
"../../components/lif/datatypes" = "lif/datatypes"
"../../components/lif/exceptions" = "lif/exceptions"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/mdr_client" = "lif/mdr_client"
"../../components/lif/translator" = "lif/translator"
